# halsey

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  TODO.txt  agent.py  dqn_hyperparams.txt  frames.py  losses.py  memory.py  nnetworks.py  nnetworks_orig.py  nnio.py  nnutils.py  noxfile.py  params.gin  params.yaml  pyproject.toml  run_agent.py  run_anna.py  space_invaders.py
anna/: __init__.py
anna/actions/: __init__.py  basechooser.py  epsilongreedy.py  utils.py
anna/agents/: __init__.py  baseagent.py  qagent.py  reader.py
anna/brains/: __init__.py  brain.py  double_dqn.py  fixed_q.py  qbrain.py  stuff_to_consider.txt  utils.py  vanilla_q.py  vanilla_q_brain.py
anna/brains/dql/: __init__.py  double.py  fixed.py  qbrain.py  vanilla.py
anna/common/: __init__.py  folio.py  validation.py
anna/core/: __init__.py  agent.py  console.py
anna/frames/: __init__.py  utils.py  vanillafm.py  vanillaframemanager.py
anna/io/: __init__.py  logger.py  manager.py  reader.py  writer.py
anna/memory/: __init__.py  episode.py  experience_memory.py  initialize.py  priority.py  standard.py  utils.py
anna/memory/experience/: __init__.py  experiencememory.py
anna/navigation/: __init__.py  basenavigator.py  framebyframe.py  utils.py
anna/networks/: __init__.py  conv1.py  dueling1.py  rnn1.py  utils.py
anna/networks/conv/: conv1.py  utils.py
anna/networks/dueling/: __init__.py  dueling1.py  utils.py
anna/networks/rnn/: __init__.py  utils.py
anna/nnio/: ioutils.py  loader.py  logger.py  manager.py  reader.py  writer.py
anna/trainers/: __init__.py  qtrainer.py  utils.py
anna/training/: utils.py
anna/utils/: __init__.py  endrun.py  env.py  experience.py  folio.py  gpu.py  profiling.py  registers.py  relay.py  validation.py
docs/: mkdocs.yml
docs/docs/: api.md  index.md  objects.md  overview.md
docs/docs/api/: brains.md
docs/docs/stylesheets/: extra.css  test.py
docs/source/: conf.py  index.rst
docs/source/Installation/: installation.rst
docs/source/Quickstart/: quickstart.rst
docs/source/parameter_file/: index.rst  parameters.rst
games/brick/: brick.py
halsey/: __init__.py
halsey/actions/: __init__.py  basechooser.py  epsilongreedy.py  utils.py
halsey/agents/: __init__.py  base.py
halsey/brains/: __init__.py  base.py  basebrain.py  qbrain.py  utils.py
halsey/brains/dql/: __init__.py  qbrain.py  vanilla.py
halsey/console/: __init__.py  run.py
halsey/core/: agent.py  console.py
halsey/explorers/: __init__.py  base.py  epsilongreedy.py
halsey/frames/: __init__.py  baseprocessor.py  utils.py  vanillafm.py
halsey/game/: base.py
halsey/instructors/: __init__.py  base.py  qinstructor.py
halsey/io/: __init__.py  logger.py  logging.py  manager.py  read.py  reader.py  write.py  writer.py
halsey/losses/: custom.py
halsey/main/: main.py
halsey/manager/: manager.py
halsey/memory/: __init__.py  base.py  basememory.py  experiencemdp.py  experiencememory.py  qmemory.py  utils.py
halsey/memory/experience/: experiencememory.py
halsey/navigation/: __init__.py  base.py  basenavigator.py  framebyframe.py  framenavigator.py  utils.py
halsey/navigators/: __init__.py  base.py  framenav.py
halsey/networks/: __init__.py  base.py  dqn.py  utils.py
halsey/networks/conv/: __init__.py  conv1.py  dqn.py  utils.py
halsey/optimizers/: custom.py
halsey/pipelines/: __init__.py  base.py  qpipeline.py
halsey/policies/: __init__.py  base.py  epsilongreedy.py
halsey/trainers/: __init__.py  base.py  basetrainer.py  qtrainer.py
halsey/utils/: __init__.py  devices.py  endrun.py  env.py  experience.py  folio.py  gpu.py  logger.py  misc.py  object_management.py  register.py  setup.py  validation.py
orig/: agent_orig.py  nnetworks_orig.py  nnutils_orig.py
orig2/: frames.py  memory.py
tests/test_pipelines/: conftest.py  test_qpipeline.py
