# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 80
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.isort]
src_paths = ["halsey", "tests"]
line_length = 80
force_single_line = true
multi_line_output = 3
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
not_skip = "__init__.py"
filter_files = true

known_first_party = "halsey"
known_third_party = [
    "gin",
    "gym",
    "h5py",
    "numpy",
    "pytest",
    "pyyaml",
    "tensorflow",
]


[tool.poetry]
name = 'halsey'
version = "0.1.0"
description = 'A code for reinforcement learning research.'
authors = ['Jared Coughlin']


[tool.poetry.dependencies]
python = '^3.8'
numpy = "^1.17"
gym = "^0.15.4"
atari_py = "^0.2.6"
tensorflow = "^2.1"
gin-config = "^0.3.0"
h5py = "^2.10.0"
tensorflow-estimator = "^2.1.0"
pyyaml = "^5.3.1"


[tool.poetry.dev-dependencies]
black = "^18.9b0"
flake8 = "^3.6"
pytest = "^6.0.2"
pytest-sugar = "^0.9.4"
nox = "^2020.8.22"
pytest-cov = "^2.10.1"
mkdocs = "^1.1.2"
isort = "^5.5.2"


[tool.poetry.scripts]
halsey = 'halsey.console.run:run'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
